--- a/TestGameObjPeople.cls
+++ b/TestGameObjPeople.cls
@@ -10,8 +10,8 @@ private class TestGameObjPeople {
     /**  Test win warrior One */
     @isTest static void TestGameFightWar1() 
     { 
-        Unit__c warriorHum = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][0]; 
-        Unit__c warriorOrc = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][1]; 
+        Unit__c warriorHum = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][0]; 
+        Unit__c warriorOrc = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][1]; 
         GameObjPeople gameOb = new GameObjPeople();             
         Test.startTest();
         gameOb.StageFightHuman(warriorHum,warriorOrc,1);
@@ -22,8 +22,8 @@ private class TestGameObjPeople {
     /**  Test win warrior Two */
     @isTest static void TestGameFightWar2() 
     {
-        Unit__c warriorHum = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][0]; 
-        Unit__c warriorOrc = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][1]; 
+        Unit__c warriorHum = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][0]; 
+        Unit__c warriorOrc = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][1]; 
         GameObjPeople gameOb = new GameObjPeople();             
         Test.startTest();
         gameOb.StageFightHuman(warriorOrc,warriorHum,1);
@@ -34,8 +34,8 @@ private class TestGameObjPeople {
     /**  Test win warrior One */
     @isTest static void TestGameFightWarOr1() 
     {
-        Unit__c warriorHum = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][0]; 
-        Unit__c warriorOrc = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][1]; 
+        Unit__c warriorHum = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][0]; 
+        Unit__c warriorOrc = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][1]; 
         GameObjPeople gameOb = new GameObjPeople();             
         Test.startTest();
         gameOb.StageFightOrc(warriorHum,warriorOrc,1);
@@ -46,8 +46,8 @@ private class TestGameObjPeople {
     /**  Test win warrior Two */
     @isTest static void TestGameFightWarOr2() 
     {
-        Unit__c warriorHum = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][0]; 
-        Unit__c warriorOrc = [select name,id,dmgMin__c,HP__c,dmgMax__c from unit__c][1];
+        Unit__c warriorHum = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][0]; 
+        Unit__c warriorOrc = [Select Name, Id, dmgMin__c, HP__c, dmgMax__c From Unit__c][1];
         GameObjPeople gameOb = new GameObjPeople();             
         Test.startTest();
         gameOb.StageFightOrc(warriorOrc,warriorHum,1);
@@ -59,9 +59,9 @@ private class TestGameObjPeople {
     @testSetup
     static void allTheDataForThisTestClass() 
     {
-        Unit__c unitOne = new Unit__c(Name='Test Unit1',HP__c=0,dmgMin__c=20,dmgMax__c=50);
+        Unit__c unitOne = new Unit__c(Name='Test Unit1', HP__c=0, dmgMin__c=20, dmgMax__c=50);
         insert unitOne;
-        Unit__c unitTwo = new Unit__c(Name='Test Unit2',HP__c=100000,dmgMin__c=1,dmgMax__c=3);
+        Unit__c unitTwo = new Unit__c(Name='Test Unit2', HP__c=100000, dmgMin__c=1, dmgMax__c=3);
         insert unitTwo;
     }
 
