--- a/JobControllerObj.cls
+++ b/JobControllerObj.cls
@@ -4,32 +4,22 @@
 */
 public with sharing class JobControllerObj
 {
-   /** List of Objects of the Account's class */
-   public List<Account> companies{get;set;}
-   
+  
    /** List of Objects of the WorkPeriod's class */
    public List<Work_Period__c> wps{get;set;}
+   
+   /** List of Objects of the Account's class */
+   public List<Account> companies{get;set;}
   
    /**
    * Constructor of the class SimpleController, it creates instances of all classes
    */
    public JobControllerObj()
    {
+     getWP();
      getCompany();
-     getWP(); 
    }
-  
-   /**
-   * Method creates Account's instances
-   */
-    public List<Account> getCompany()
-   {
-     companies = [select Id, Name from Account Order by Name ASC];   
-     System.Debug(companies);
-     return companies;     
-   }
- 
-      
+     
    /**
    * Method creates WorkPeriod's instances
    */
@@ -37,8 +27,23 @@ public with sharing class JobControllerObj
    {
      wps = [Select Id, Name, Order__r.Id, Order__r.Account__r.Name, 
            Rate__r.Id, Rate__r.Customer_Rate__c, Rate__r.Employer_Rate__c 
-           From Work_Period__c Where Order__r.Account__r.Id IN : companies Order by Name ASC]; 
+           From Work_Period__c Order by Name ASC]; 
      System.Debug(wps);
      return wps;
+   }
+   
+   /**
+   * Method creates Account's instances
+   */
+    public List<Account> getCompany()
+   {
+       companies = new List<Account>();
+       for (Work_Period__c period: wps)
+       {
+          System.Debug(period);
+          companies.add(period.Order__r.Account__r);
+       }
+
+       return companies;     
    }
 }
