--- a/TestGameCallObjPeople.cls
+++ b/TestGameCallObjPeople.cls
@@ -405,6 +405,25 @@ private class TestGameCallObjPeople {
        System.assertEquals(controller.blk, 4);
     }
     
+    /**  Test random value */
+    @isTest static void TestRandType() 
+    {
+        Set<integer> someValues = new Set<integer>{1,2,3,4};
+        List<integer> otherValues = new List<integer>();
+        GameCallObjPeople gameOb = new GameCallObjPeople();             
+        Test.startTest();
+        for(integer i =0; i<1000;i++)
+        {
+           integer val = gameOb.randType();
+           if(!someValues.contains(val))
+           {
+             otherValues.add(val);  
+           }
+        }
+        Test.stopTest();
+        System.assertEquals(otherValues.size(),0);
+    } 
+    
     /** Data for tests */
     @testSetup
     static void allTheDataForThisTestClass() {
