--- a/JobControllerObj.cls
+++ b/JobControllerObj.cls
@@ -9,7 +9,7 @@ public with sharing class JobControllerObj
    public List<Work_Period__c> wps{get;set;}
    
    /** List of Objects of the Account's class */
-   public List<Account> companies{get;set;}
+   public Set<Account> companies{get;set;}
   
    /**
    * Constructor of the class SimpleController, it creates instances of all classes
@@ -25,7 +25,7 @@ public with sharing class JobControllerObj
    */
    public List<Work_Period__c> getWP()
    {
-     wps = List<Work_Period__c>([Select Id, Name, Order__r.Id, Order__r.Account__r.Name, 
+     wps = new List<Work_Period__c>([Select Id, Name, Order__r.Id, Order__r.Account__r.Name, 
            Rate__r.Id, Rate__r.Customer_Rate__c, Rate__r.Employer_Rate__c 
            From Work_Period__c Order by Name ASC]); 
      System.Debug(wps);
@@ -35,9 +35,9 @@ public with sharing class JobControllerObj
    /**
    * Method creates Account's instances
    */
-    public List<Account> getCompany()
+    public Set<Account> getCompany()
    {
-       companies = new List<Account>();
+       companies = new Set<Account>();
        for (Work_Period__c period: wps)
        {
           System.Debug(period);
