--- a/GameCallObj.cls
+++ b/GameCallObj.cls
@@ -280,7 +280,10 @@ public with sharing class GameCallObj
     */
     public void searchSOQL() 
     {  
-       unitsSOQL = [select name,id from Unit__c where name =: searchstring];
+       if(String.isBlank(searchstring)==false)
+       {
+         unitsSOQL = [select name,id from Unit__c where name =: searchstring];
+       }
     }
     
     /** '
@@ -288,7 +291,10 @@ public with sharing class GameCallObj
     */
     public void searchSOSL() 
     {  
-       unitsSOSL = (List<Unit__c>)([FIND :searchstring IN ALL Fields RETURNING Unit__c(name,id)][0]);  
+       if(String.isBlank(searchstring)==false)
+       {
+         unitsSOSL = (List<Unit__c>)([FIND :searchstring IN ALL Fields RETURNING Unit__c(name,id)][0]);  
+       }
     }
     
     /** 
@@ -296,8 +302,11 @@ public with sharing class GameCallObj
     */
     public void clear()
     {  
-       unitsSOQL.clear();  
-       unitsSOSL.clear();
+       if(String.isBlank(searchstring)==false)
+       {
+         unitsSOQL.clear();  
+         unitsSOSL.clear();
+       }
     }  
     
 }
